Fix jumping on hover in navigation

--- a/src/keybar/static/scss/app.scss
+++ b/src/keybar/static/scss/app.scss
@@ -53,6 +53,7 @@ section[role="header"] {
 								color: #000;
 								background: #fff;
 								font-size: 1.2rem;
+								border-bottom: 2px solid $topbar-bg-color;
 
 								&:hover {
 									border-bottom: 2px solid $primary-color;
